	Fixed bug where text ending with space could not be unformatted in IE.
	Fixed bug where caret formatting would be removed when moving the caret when a selector expression was used.
	Fixed bug where formatting would be applied to the body element when all contents where selected and format had both inline and selector parts.
	Fixed so elements with comments would be trated as non empty elements. Patch contributed by Arjan Scherpenisse.
Version 3.4.8 (2012-02-02)
	Fixed bug in IE where selected text ending with space cannot be formatted then formatted again to get original text.
	Fixed bug in IE where images larger than editor area were being deselected when toolbar buttons are clicked.
	Fixed bug where wrong text align buttons are active when multiple block elements are selected.
	Fixed bug where selected link not showing in target field of link dialog in some selection cases.
	Use settings for remove_trailing_br so this can be turned off instead of hard coding the value.
	Fixed bug in IE where the media plugin displayed null text when some values aren't filled in.
	Added API method 'onSetAttrib' that fires when the attribute value on a node changes.
	Fix font size dropdown value not being updated when text already has a font size in the advanced template.
	Fixed bug in IE where IE doesn't use ARIA attributes properly on options - causing labels to be read out 2 times.
	Fixed bug where caret cannot be placed after table if table is at end of document in IE.
	Fixed bug where adding range isn't always successful so we need to check range count otherwise an exception can occur.
	Added spacebar onclick handler to toolbar buttons to ensure that the accessibility behaviour works correctly.
	Fixed bug where a stranded bullet point would get created in WebKit.
	Fixed bug where selecting text in a blockquote and pressing backspace toggles the style.
	Fixed bug where pressing enter from a heading in IE, the resulting P tag below it shares the style property. 